if_ffec: correctly trim 2 bytes from the beginning

PR:		283315
Tested by:	tuexen

(cherry picked from commit b29842622dcb9c9c9515fc04dc5826a8717537b1)